Change history
--------------

Release Candidate 1
===================

- Fixed MR-129
  "Add log support as discussed on the mailing list"

- Added Logger property to Controller

- Added more logging information to the request lifecycle

- Logging support: Important services are now logging what they are doing. 
  Verbose logging happens at Debug Level. Error level is used for exceptions

- Refactored: The EngineContextModule was simplified. Now its duty is to 
  instantiate the services and invoke the lifecycle methods. Each service uses
  its lifecycle methods to reference other services and obtain its configuration

- Refactored: replaceable services were moved to Services namespace

- Refactored: interfaces meant to be public were moved from Internal 
  namespace to the root

- Fixed MR-126
  "PaginationHelper must support IList<T>"

- Fixed MR-146
  "FormHelper must be able to handle IList<T>"

- Fixed MR-145 
  "Change node/section name from monoRail to monorail on configuration file"
  
  Now on the configuration, use <monorail> instead of <monoRail>

- Included Test site for ActiveRecord support project, watir tests included

- Refactored ARDataBinder to support HasMany and HasAndBelongsToMany

- Applied Ernst Naezer <enix@ch10.shuis.tudelft.nl>'s patch fixing build

- Introduced [AjaxAction] attribute. Any action marked with this attribute
  can be accessed on client-side scripting using a JavaScript proxy, like
  this:

     $ajaxHelper.getJavascriptFunctions()
       ## MANDATORY, must come before any call to generateJSProxy

     $ajaxHelper.generateJSProxy('thisController')
       ## will declare an object named "thisController", allowing access
       ## to all [AjaxAction]s on the current controller

     $ajaxHelper.generateJSProxy('util', 'lists', 'myLists')
       ## will declare an object named "myLists", allowing access
       ## to all [AjaxAction]s on the controller named 'lists', in the 'util' area
