@@ -4,6 +4,11 @@ Change history
 Release Candidate 1
 ===================
 
+- Fixed MR-128
+  "Introduce the notion of conditions to WizardStepPage"
+  
+  Introduced IsPreConditionSatisfied to WizardStepPage
+
 - Fixed MR-129
   "Add log support as discussed on the mailing list"
 
